--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-loading-skeleton": "^3.0.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "swiper": "^8.0.7",
