--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hls-player": "^3.0.7",
     "react-icons": "^4.3.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^8.33.1",
     "react-lazy-load-image-component": "^1.5.1",
     "react-loading-skeleton": "^3.0.3",
     "react-router-dom": "^6.2.2",
