--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-loading-skeleton": "^3.0.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-tuby": "^0.1.22",
     "react-use": "^17.3.2",
     "swiper": "^8.0.7",
     "web-vitals": "^2.1.4"
